--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,8 @@
   "root": true,
   "ignorePatterns": ["projects/**/*"],
   "extends": [
+    // Uses the recommended rules from the @typescript-eslint/eslint-plugin
+    "plugin:@typescript-eslint/recommended",
     /**
      * Enables eslint-plugin-prettier and eslint-config-prettier.
      * This will display prettier errors as ESLint errors.
